--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div class="cover black" data-color="black"></div>
     <div class="container">
         <h1 class="logo cursive">
-            <Font color=#33EBFF>Hello, I am Vihaan Thakur</Font>
+            <Font color=#33EBFF>ello, I am Vihaan Thakur</Font>
         </h1>
 
         <div class="content">
