--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://pt0.com/" />
+    <meta http-equiv="refresh" content="0; url=https://www.pt0.com/" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://pt0.com/">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://www.pt0.com/">click here</a>.</p>
   </body>
 </html>
