--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; url=https://www.pt0.com/" />
-    <title>Redirecting...</title>
+    <title>Redirecting....</title>
   </head>
   <body>
     <p>If you are not redirected, <a href="https://www.pt0.com/">click here</a>.</p>
